Create Constants Classes and Move JWT Parsing to Service Layer
- Added two constants classes:
  1. BusinessConstants: contains business-related constant values.
  2. ApplicationConstants: contains application-wide constant values.

- Moved parseJwtFromRequest method from controller layer to service layer for better separation of concerns and reusability.