@@ -1,5 +1,6 @@
 package com.transfer.controller;
 
+import com.transfer.constants.BusinessConstants;
 import com.transfer.dto.TransactionRequestDTO;
 import com.transfer.dto.TransactionResponseDTO;
 import com.transfer.entity.Transaction;
@@ -15,7 +16,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/transactions")
@@ -26,8 +26,8 @@ public class TransactionController {
     private final ITransactionService transactionService;
 
     @Operation(summary = "Transfer money between accounts")
-    @ApiResponse(responseCode = "200", content = {@Content(schema = @Schema(implementation = TransactionResponseDTO.class), mediaType = "application/json")})
-    @ApiResponse(responseCode = "400", content = {@Content(schema = @Schema(implementation = ErrorDetails.class), mediaType = "application/json")})
+    @ApiResponse(responseCode = BusinessConstants.RESPONSE_CODE_200, content = {@Content(schema = @Schema(implementation = TransactionResponseDTO.class), mediaType = BusinessConstants.APPLICATION_JSON)})
+    @ApiResponse(responseCode = BusinessConstants.RESPONSE_CODE_400, content = {@Content(schema = @Schema(implementation = ErrorDetails.class), mediaType = BusinessConstants.APPLICATION_JSON)})
     @PostMapping("/transfer")
     public ResponseEntity<TransactionResponseDTO> transferMoney(@RequestBody TransactionRequestDTO request) throws ResourceNotFoundException {
         TransactionResponseDTO responseDTO = transactionService.transferMoney(request);
@@ -35,22 +35,26 @@ public class TransactionController {
     }
 
     @Operation(summary = "Get Transaction History by Account ID")
-    @ApiResponse(responseCode = "200", content = {@Content(schema = @Schema(implementation = TransactionResponseDTO.class), mediaType = "application/json")})
-    @ApiResponse(responseCode = "400", content = {@Content(schema = @Schema(implementation = ErrorDetails.class), mediaType = "application/json")})
+    @ApiResponse(responseCode = BusinessConstants.RESPONSE_CODE_200, content = {@Content(schema = @Schema(implementation = TransactionResponseDTO.class), mediaType = BusinessConstants.APPLICATION_JSON)})
+    @ApiResponse(responseCode = BusinessConstants.RESPONSE_CODE_400, content = {@Content(schema = @Schema(implementation = ErrorDetails.class), mediaType = BusinessConstants.APPLICATION_JSON)})
     @GetMapping("/history/{accountId}")
     public ResponseEntity<List<TransactionResponseDTO>> getTransactionHistory(@PathVariable Long accountId) throws ResourceNotFoundException {
         List<Transaction> transactions = transactionService.getTransactionHistory(accountId);
 
+        if (transactions.isEmpty()) {
+            return ResponseEntity.noContent().build();
+        }
+
         List<TransactionResponseDTO> responseDTOs = transactions.stream().map(transaction -> {
             TransactionResponseDTO responseDTO = new TransactionResponseDTO();
-            responseDTO.setFromAccountNumber(transaction.getFromAccount().getAccountNumber());  // Use account number
-            responseDTO.setToAccountNumber(transaction.getToAccount().getAccountNumber());      // Use account number
+            responseDTO.setFromAccountNumber(transaction.getFromAccount().getAccountNumber());
+            responseDTO.setToAccountNumber(transaction.getToAccount().getAccountNumber());
             responseDTO.setFromAccountName(transaction.getFromAccount().getCustomer().getName());
             responseDTO.setToAccountName(transaction.getToAccount().getCustomer().getName());
             responseDTO.setAmount(transaction.getAmount());
             responseDTO.setTransactionDate(transaction.getTransactionDate().toInstant().toString()); // Format to ISO 8601
             return responseDTO;
-        }).collect(Collectors.toList());
+        }).toList();
 
         return ResponseEntity.ok(responseDTOs);
     }
